fixed scroll-snap on mobile hopefully

--- a/assets/styles/pages/_landing.scss
+++ b/assets/styles/pages/_landing.scss
@@ -7,6 +7,7 @@
 .landing {
   height: 100vh;
   width: auto;
+  scroll-snap-align: start;
   main {
     padding: 0;
     height: 100%;
